<resources>
    <string name="app_name">MyAquar-eg</string>
    //ToolBar
    <string name="ToolBar_All">All</string>
    <string name="ToolBar_Al">     </string>
    <string name="ToolBar_Res">Residential</string>
    <string name="ToolBar_Com">Commercial</string>
    <string name="ToolBar_Med">Medical</string>
    <string name="ToolBar_HH">Holy Day Home</string>
    <string name="ToolBar_Ls">Launch Soon</string>

    //menuItem
    <string name="MenuItem_FindHome">Find Your Home</string>
    <string name="MenuItem_PHome">Popular Home</string>
    <string name="MenuItem_Magazine">Free Magazine</string>
    <string name="MenuItem_Sub">Subscribe</string>
    <string name="MenuItem_News">Real State News</string>
    <string name="MenuItem_FreeAc">Get Free Account</string>
    <string name="MenuItem_Contact">Contact us</string>

    //Product_details
    <string name="Product_Des">Description:</string>
    <string name="Product_Type">Property Type</string>
    <string name="Product_Size">Property Size</string>
    <string name="Product_BedRoom">BedRooms</string>
    <string name="Product_BathRoom">BathRooms</string>
    <string name="Product_Accommodation">Accommodation</string>


    <string name="dis1">


    </string>
    <string name="dis2">

    </string>
    <string name="dis3">

    </string>
    <string name="dis4">


    </string>

</resources>
