<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Navigation_Res"
        android:icon="@drawable/ic_commertial"
        android:title="@string/ToolBar_Res" />

    <item
        android:id="@+id/Navigation_Com"
        android:icon="@mipmap/ic_ress"
        android:title="@string/ToolBar_Com" />

    <!--Navigation_Com-->

    <item
        android:id="@+id/Navigation_Med"
        android:icon="@drawable/ic_medical"
        android:title="@string/ToolBar_Med" />

    <item
        android:id="@+id/Navigation_HH"
        android:icon="@mipmap/ic_hh"
        android:title="Holiday" />


    <item
        android:id="@+id/Navigation_LS"
        android:icon="@mipmap/ic_ls"
        android:title="@string/ToolBar_Ls" />
</menu>