<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ebefefef"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margin_small">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Product_Des"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/margin_small"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/Product_Frag_Details"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/Product_Type"
                android:layout_marginBottom="@dimen/margin_small"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/Product_Size"
                android:layout_marginBottom="@dimen/margin_small"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/Product_BedRoom"
                android:layout_marginBottom="@dimen/margin_small"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/Product_BathRoom"
                android:layout_marginBottom="@dimen/margin_small"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/Product_Accommodation"
                android:layout_marginBottom="@dimen/margin_small"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_large">
            <TextView
                android:id="@+id/Product_Frag_Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/margin_small"/>
            <TextView
                android:id="@+id/Product_Frag_Size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/margin_small"/>
            <TextView
                android:id="@+id/Product_Frag_BedRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/margin_small"/>
            <TextView
                android:id="@+id/Product_Frag_BathRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/margin_small"/>
            <TextView
                android:id="@+id/Product_Frag_Accommodation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/margin_small"/>
        </LinearLayout>



    </LinearLayout>


    </LinearLayout>


